# temperature-monitor

./: .clang-format  .envrc  .gitignore  CMakeLists.txt  README.md  flash.sh  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  constants.hpp  ds18b20.cpp  ds18b20.hpp  idf_component.yml  il_9341.cpp  il_9341.hpp  lvlg.cpp  lvlg.hpp  main.c  main.cpp  mqtt_manager.cpp  mqtt_manager.hpp  task_read_temperature.hpp  task_update_display.hpp  temperature_data.hpp  wifi_manager.cpp  wifi_manager.hpp
main/tasks/: task_read_temperature.hpp  task_send_mqtt_temperature.hpp  task_update_display.hpp
schematic/: _autosave-thermo-monitor.kicad_prl  _autosave-thermo-monitor.kicad_pro  fp-info-cache  sym-lib-table  thermo-monitor.kicad_pcb  thermo-monitor.kicad_prl  thermo-monitor.kicad_pro  thermo-monitor.kicad_sch  thermo-monitor.kicad_sch-bak  ~_autosave-thermo-monitor.kicad_pcb.lck
